# fourinarow-server

./: .env_template  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  infrastructure.md
.github/workflows/: docker-publish.yml
.serena/: project.yml
agents/: game-server-developer.md
config/: MinigameLevelConfigData.json  MinigameModeConfigData.json  MinigameSceneConfigData.json
deploy/: 01_prod_db_setup.sql  02_export.sh  03_restore.sh  README.md
docs/: implement_sum.md  prod.md
migrations/: 001_initial.sql  002_items_inventory_shop.sql  003_quests.sql  004_invites.sql  005_player_cache_management.sql  006_realtime_and_progression.sql  007_quests_and_progressive_achievements.sql  008_notification_inbox_badge.sql  009_minigame_config.sql  010_seed_minigame_yingge_config_v1.sql  011_minigame_leaderboard.sql  012_minigame_tasks.sql  013_minigame_signin_streak.sql
openspec/: config.yaml
src/: main.rs
src/api/: gameplay.rs  inbox.rs  inventory.rs  invites.rs  leaderboard.rs  minigame_config.rs  minigame_leaderboard.rs  minigame_tasks.rs  mod.rs  notifications.rs  quests.rs
src/config/: mod.rs
src/database/: chat_msg.rs  friendships.rs  games.rs  inbox.rs  invites.rs  items.rs  leaderboard.rs  minigame_config.rs  minigame_leaderboard.rs  minigame_tasks.rs  mod.rs  notifications.rs  quests.rs  users.rs
src/game/: client_connection.rs  client_state.rs  connection_mgr.rs  game_info.rs  lobby.rs  msg.rs
src/items/: mod.rs
src/logging/: activity.rs  game_logging.rs  lobby_logging.rs  mod.rs
src/player/: mod.rs  (+2 more)
(+59 files in other folders)
