[package]
name = "fourinarow-server"
version = "1.4.0"
authors = ["Filippo Orrù <filippoorru@hotmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2"
actix = "0.13"
actix-web = { version = "4", features = ["rustls-0_21"] }
actix-web-actors = "4"
actix-files = "0.6"
actix-cors = "0.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
futures = "0.3"

chrono = { version = "0.4.34", features = ["serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "migrate", "macros", "chrono"] }
reqwest = { version = "0.11", features = ["json"] }

base64 = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1.1"
rustls = "0.21"
env_logger = "0.10"
log = "0.4"
rand = "0.8"
sha3 = "0.10"
sha2 = "0.10"  # minigame-config 版本内容 checksum（sha256，ETag/完整性，与种子一致）
dashmap = "5"
lettre = "0.10.0-beta.2"
dotenv = "0.15.0"

# [profile.release]
# debug = true